--- a/Section 8 - Advanced CSS/8.4+Web+Design+Agency+Project/8.4 Web Design Agency Project/style.css
+++ b/Section 8 - Advanced CSS/8.4+Web+Design+Agency+Project/8.4 Web Design Agency Project/style.css
@@ -10,22 +10,6 @@ body {
   flex: 1;
 }
 
-
-h1 {
-  font-size: 5rem;
-  display: block;
-  width: 50%;
-  margin-top: 0;
-}
-
-#creative {
-  color: navy;
-}
-
-#we-are-a, #creative {
-  display: inline;
-}
-
 .logo {
   display: block;
   padding-bottom: 50px;
@@ -33,36 +17,83 @@ h1 {
   margin: 0;
 }
 
+#creative {
+  color: navy;
+}
+
 .card {
   display: inline-block;
   width: 50%;
 }
 
-.left {
-  float: left;
-}
-
-.card-title, .card-text, .right > p {
-  display: inline-block;
-  width: 45%;
-  margin-left: 50px;
+@media (min-width: 681px) {
+  h1 {
+    font-size: 5rem;
+    display: inline-block;
+    width: 60%;
+    margin-top: 0;
+  }
+  .card-title, .card-text, .right > p {
+    display: inline-block;
+    width: 45%;
+    margin-left: 1rem;
+  }
+  .left {
+    float: left;
+  }
+  .right {
+    float: right;
+  }
 }
 
 .card-title {
   margin-bottom: 0;
 }
 
-.right {
-  float: right;
-}
-
 .tile-image {
   float: left;
-  width: 19rem;
+  width: 50%;
 }
 
 footer {
   text-align: right;
   color: midnightblue;
+  clear: both;
 }
 
+@media (max-width: 680px) {
+  .logo {
+    width: 7rem;
+    margin-top: 20px;
+  }
+
+  h1 {
+    font-size: 4rem;
+    display: block;
+    margin-top: 0;
+    text-align: center;
+  }
+
+  .card {
+    width: 100%;
+  }
+
+  .tile-image {
+    width: 100%;
+    height: 100%;
+  }
+
+  .card-title, .card-text, .right > p {
+    display: block;
+    clear: both;
+    margin-left: 0;
+  }
+
+  .card-title {
+    padding-top: 2rem;
+  }
+
+  .card-text, .right > p {
+    margin-bottom: 5rem;
+  }
+}
