--- a/Section 12 - Capstone Project 2 - Personal Site/style.css
+++ b/Section 12 - Capstone Project 2 - Personal Site/style.css
@@ -19,3 +19,20 @@ font-weight: 515;
     font-weight: 545;
     font-size: 30px;
 }
+
+.carousel-width {
+    max-height: 400px
+}
+
+#hero {
+    min-height: 836px;
+}
+
+@media (min-width: 600px) {
+    #hero {
+        background-attachment: fixed;
+        background-repeat: no-repeat;
+        background-color: #DCAF85;
+    }
+}
+
